--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: rgb(0, 0, 0);
+}
+
 .container {
     display: grid;
     grid-template-areas:
@@ -21,7 +25,7 @@ header {
     display: flex;
     justify-content: space-between;
     grid-area: header;
-    background-color: rgb(2, 0, 27);  
+    background-color: rgb(0, 0, 0);  
     color: white;
     
     padding: 0 20px;
@@ -51,7 +55,7 @@ header p {
 }
 
 main {grid-area: main;
-    background-color: rgb(2, 0, 27);
+    background-color: rgb(0, 0, 0);
     color: white;
     display: flex;
     align-items: center;
@@ -75,13 +79,14 @@ main {grid-area: main;
     transform: scale(1.1);
 }
 
-aside {grid-area: aside;
-    color: rgb(2, 0, 27);
+aside {
+    grid-area: aside;
+    color: rgb(255, 255, 255);
 }
 
 .containerprojetos {grid-area: containerprojetos;
     gap: 20px;
-    background-color: rgb(2, 0, 27);
+    background-color: rgb(0, 0, 0);
     color: white;
 }
 
@@ -103,7 +108,6 @@ p {
 h1 {
     display: flex;
     justify-content: center;
-    text-shadow: 0px 0px 10px rgb(2, 0, 27);
 }
 
 .gradeprojetos {
@@ -136,7 +140,7 @@ footer {
 }
 
 footer h1 {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-shadow: none;
     font-size: 30px;
 }
@@ -144,7 +148,7 @@ footer h1 {
 footer p {
     display: flex;
     justify-content: center;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 20px;
 }
 
@@ -156,4 +160,81 @@ footer a {
 
 footer a:hover {
     text-decoration: underline;
+}
+
+
+button{
+    height: 40px;
+    background-color: rgb(17, 0, 255);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+header button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+    font-size: 20px;
+}
+
+button:hover {
+    background-color: royalblue;
+}
+
+.darck-mode .container
+.darck-mode main,
+.darck-mode header,
+.darck-mode .containerprojetos,
+.darck-mode footer {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
+
+.darck-mode main{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
+
+.darck-mode aside {
+    color: rgb(255, 255, 255);
+}
+
+.darck-mode footer p,
+.darck-mode footer h1 {
+    color: white;
+    text-shadow: none;
+}
+
+.darck-mode .projetos {
+    box-shadow: 0px 0px 10px white;
+}
+
+.darck-mode .destaque {
+    color: rgb(0, 7, 65);
+}
+
+.darck-mode main p{
+    color: black;
+}
+
+.darck-mode header p {
+    color: black;
+}
+
+.darck-mode aside h1 {
+    color: #000;
+}
+
+.darck-mode footer h1{
+    color: black;
+}
+
+.darck-mode footer p {
+    color: black;
+}
+
+.darck-mode {
+    background-color: rgb(255, 255, 255);
 }
