--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ aside {
 
 
 .murilo {
-    
     width: 170px;
     height: 170px;
     border-radius: 100%;
@@ -208,7 +207,7 @@ button:hover {
 }
 
 .darck-mode .projetos {
-    box-shadow: 0px 0px 10px white;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
 }
 
 .darck-mode .destaque {
